--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src -d dist",
+    "start": "node dist/index.js",
+    "build:start": "npm run build && npm start",
+    "test": "mocha --recursive",
+    "lint": "eslint src test",
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --recursive && start coverage/lcov-report/index.html"
   },
   "keywords": [],
   "author": "",
